--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,7 +1,7 @@
 <div class="form-wrapper">
   <div class="form-container">
     <div class="form-card">
-      <p style="color: green"><%= notice %></p>
+      <p class="notice-success"><%= notice %></p>
 
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="page-title"><%= @classroom.name %></h1>
