--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,7 +1,7 @@
 <div class="form-wrapper">
   <div class="form-container">
     <div class="form-card">
-      <p style="color: green"><%= notice %></p>
+      <p class="notice-success"><%= notice %></p>
 
       <% content_for :title, @assignment.title %>
 
@@ -43,7 +43,7 @@
 
           <div class="mb-3">
             <strong>Progress:</strong>
-            <div class="progress mt-2" style="height: 25px;">
+            <div class="progress mt-2 progress-height-large">
               <div class="progress-bar <%= 
                 if @assignment.progress >= 75
                   'bg-success'
@@ -63,7 +63,7 @@
           <% if @assignment.description.present? %>
             <div class="mt-3">
               <strong>📄 Description:</strong>
-              <div class="mt-2 p-3" style="background-color: #f8f9fa; border-radius: 5px; white-space: pre-wrap;"><%= @assignment.description %></div>
+              <div class="mt-2 p-3 description-box"><%= @assignment.description %></div>
             </div>
           <% end %>
         </div>
