--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,6 +20,10 @@
         </li>
 
         <li class="nav-item">
+          <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
         </li>
       <% else %>
@@ -33,7 +37,13 @@
     </ul>
     
     <div class="ms-auto">
-      <%= image_tag "assignment.png", alt: "Logo", class: "navbar-logo", style: "width: 40px; height: 40px;" %>
+      <% if user_signed_in? && current_user.avatar.attached? %>
+        <%= link_to edit_user_registration_path, title: "Edit Profile" do %>
+          <%= image_tag url_for(current_user.avatar), alt: "Profile", class: "navbar-logo" %>
+        <% end %>
+      <% else %>
+        <%= image_tag "assignment.png", alt: "Logo", class: "navbar-logo" %>
+      <% end %>
     </div>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
